# finmem-agent

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.cursor/rules/: environment-standards.mdc  git-standards.mdc  readonly-references.mdc
configs/: agents.yaml
configs/prompts/: factor_expertise.yaml  risk_profiles.yaml
docs/paper/: summary.md
docs/plans/: architecture.md  prd.md
langgraph-v1-tutorial/: pyproject.toml
langgraph-v1-tutorial/00-Template/: Sample-Template.ipynb
langgraph-v1-tutorial/01-QuickStart/: 01-QuickStart-LangGraph-Tutorial.py  02-QuickStart-LangGraph-Graph-API.py  03-QuickStart-LangGraph-Ollama.ipynb  03-QuickStart-LangGraph-Ollama.py
langgraph-v1-tutorial/02-Basic/: 01-LangGraph-Models.py  02-LangGraph-Messages.py  03-LangGraph-Building-Graphs.py
langgraph-v1-tutorial/03-Agent/: 01-LangGraph-Agents.ipynb  01-LangGraph-Agents.py  02-LangGraph-Tools.py  03-LangGraph-Streaming.py  04-LangGraph-Runtime.ipynb  04-LangGraph-Runtime.py  05-LangGraph-Structured-Output.ipynb  05-LangGraph-Structured-Output.py
langgraph-v1-tutorial/04-Middleware/: 01-LangGraph-Middleware.ipynb  01-LangGraph-Middleware.py  02-LangGraph-Human-In-The-Loop.py  03-LangGraph-Context-Engineering.py  04-LangGraph-Guardrail.ipynb  04-LangGraph-Guardrail.py
langgraph-v1-tutorial/05-Memory/: 01-LangGraph-Add-Memory.py  02-LangGraph-Memory-Postgres.py  03-LangGraph-Short-Term-Memory.py  04-LangGraph-Long-Term-Memory.py
langgraph-v1-tutorial/06-MCP/: 01-LangGraph-MCP-Tutorial.ipynb  01-LangGraph-MCP-Tutorial.py
langgraph-v1-tutorial/07-Supervisor/: 01-LangGraph-Supervisor.ipynb  01-LangGraph-Supervisor.py  02-LangGraph-Multi-Agent-Collaboration.ipynb  02-LangGraph-Multi-Agent-Collaboration.py  03-LangGraph-Multi-Agent-Supervisor.py  04-LangGraph-Hierarchial-Agent-Team.ipynb  (+3 more)
scripts/: check_data.py  demo_detailed_factors.py  demo_rag_e2e.py  ingest_pdfs.py  init_parquet_db.py  inspect_importance.py  preview_prompt.py  reset_importance.py  sync_vector_db.py  test_rag_graph.py  train_reflection_loop.py
src/: config.py
src/rag/: base.py
tests/: conftest.py  test_faiss_persistence.py
(+93 files in other folders)
